<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="menu_dark">Тёмная тема</string>

    <string name="menu_share">Поделиться приложением</string>
    <string name="share_url" translatable="false">https://practicum.yandex.ru/referrals/?ref_code=gAAAAABmo_KiI0v1JXr0mzVglejzlHxQthCf54q8DeguprDZCnmcBXTrG_JNtvtmjGkk2Vb1kMHdGjeFToArtWDvrJ_beTvWDw%3D%3D</string>

    <string name="menu_support">Написать в поддержку</string>

    <string name="support_adress" translatable="false">1350077@mail.ru</string>
    <string name="support_subject">Сообщение разработчикам приложения Playlist Maker</string>

    <string name="menu_agreement">Пользовательское соглашение</string>
    <string name="agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_hint" translatable="false">@string/button_search</string>
    <string name="support_message">Спасибо разработчикам за крутое приложение!</string>

    <string name="button_update">Обновить</string>
    <string name="button_clear_history">Очистить историю</string>

    <string name="loading">Выполняется поиск...</string>
    <string name="search_history">Вы искали</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="net_error">\nПроблемы со связью.\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="test_artist" translatable="false">Beatles</string>
    <string name="test_track" translatable="false">Yesterday (Remastered 2009)</string>
    <string name="one_three_five" translatable="false">1:35</string>
    <string name="zero_time" translatable="false">00:00</string>
    <string name="test_year" translatable="false">1965</string>
    <string name="test_genre" translatable="false">Rock</string>
    <string name="test_country">Великобритания</string>
    
    <string name="track_time">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>

    <string name="button_play">Играть</string>
</resources>