<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker">

    <FrameLayout
        android:id="@+id/btn_back"
        style="@style/backButtonFrame">

        <LinearLayout
            style="@style/backButtonLine">

            <ImageView
                android:src="@drawable/back"
                style="@style/backButton"/>

            <TextView
                android:text="@string/button_settings"
                style="@style/backButtonText" />
        </LinearLayout>

    </FrameLayout>

    <!-- пункты меню -->

    <FrameLayout
        style="@style/SettingsLine">

        <TextView
            android:text="@string/menu_dark"
            style="@style/SettingsLineText" />

        <Switch
            android:id="@+id/btn_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <!--
            TODO - Убрал padding, выполнил рекомендацию Android Studio (последняя строчка),
            TODO - как ещё можно подогнать Switch для точного соответствия дизайну, не понимаю.
            TODO - В материалах курса тоже не нашёл информации по этому поводу
            TODO - Буду благодарен за подсказку
            -->

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_share"
        style="@style/SettingsLine">

        <TextView
            android:text="@string/menu_share"
            style="@style/SettingsLineText" />

        <ImageView
            android:src="@drawable/share"
            style="@style/SettingsLineImage" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_support"
        style="@style/SettingsLine">

        <TextView
            android:text="@string/menu_support"
            style="@style/SettingsLineText" />

        <ImageView
            android:src="@drawable/support"
            style="@style/SettingsLineImage" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_agreement"
        style="@style/SettingsLine">

        <TextView
            android:text="@string/menu_agreement"
            style="@style/SettingsLineText" />

        <ImageView
            android:src="@drawable/arrow_right"
            style="@style/SettingsLineImage" />
    </FrameLayout>

</LinearLayout>