<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/padding_4"
        android:layout_marginTop="@dimen/padding_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_48"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_line_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_line_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_24" />

    <ImageView
        android:id="@+id/track_image"
        android:layout_marginTop="@dimen/padding_24"
        android:layout_marginBottom="@dimen/padding_24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/test_album"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@id/v_line_left"
        app:layout_constraintEnd_toStartOf="@id/v_line_right"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/track_name"
        style="@style/PlayerTrackNameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_24"
        app:layout_constraintStart_toEndOf="@id/v_line_left"
        app:layout_constraintEnd_toStartOf="@id/v_line_right"
        app:layout_constraintTop_toBottomOf="@id/track_image"
        tools:text="@string/test_track"
        android:maxLines="1"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/PlayerArtistNameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginBottom="@dimen/padding_8"
        app:layout_constraintStart_toEndOf="@id/v_line_left"
        app:layout_constraintEnd_toStartOf="@id/v_line_right"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="@string/test_artist"
        android:maxLines="1"
        android:ellipsize="end" />

    <ImageView
        android:id="@+id/fav_button"
        android:src="@drawable/plst_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/v_line_left"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button" />

    <ImageView
        android:id="@+id/play_button"
        android:src="@drawable/play_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintEnd_toStartOf="@id/like_button"
        app:layout_constraintStart_toEndOf="@id/fav_button" />

    <ImageView
        android:id="@+id/like_button"
        android:src="@drawable/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/v_line_right"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"/>

    <TextView
        android:id="@+id/play_time"
        style="@style/PlayerArtistNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/one_three_five"
        android:layout_marginTop="@dimen/padding_4"
        app:layout_constraintEnd_toEndOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@id/play_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_line_left_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_line_right_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_16" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/track_info_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="info" />

    <TextView
        android:id="@+id/info_track_time"
        style="@style/PlayerTrackInfoLeft"
        android:text="@string/track_time"
        app:layout_constraintStart_toEndOf="@id/v_line_left_2"
        app:layout_constraintBottom_toTopOf="@id/info_track_album"
        app:layout_constraintTop_toBottomOf="@id/play_time"
        app:layout_constraintTag="info" />

    <TextView
        android:id="@+id/track_time"
        style="@style/PlayerTrackInfoRight"
        app:layout_constraintEnd_toStartOf="@id/v_line_right_2"
        app:layout_constraintBottom_toTopOf="@id/track_album"
        app:layout_constraintTop_toBottomOf="@id/play_time"
        tools:text="@string/test_time" />

    <TextView
        android:id="@+id/info_track_album"
        style="@style/PlayerTrackInfoLeft"
        android:text="@string/track_album"
        app:layout_constraintStart_toEndOf="@id/v_line_left_2"
        app:layout_constraintBottom_toTopOf="@id/info_track_year"
        app:layout_constraintTop_toBottomOf="@id/track_time"
        app:layout_constraintTag="info" />

    <TextView
        android:id="@+id/track_album"
        style="@style/PlayerTrackInfoRight"
        app:layout_constraintEnd_toStartOf="@id/v_line_right_2"
        app:layout_constraintBottom_toTopOf="@id/track_year"
        app:layout_constraintTop_toBottomOf="@id/info_track_time"
        tools:text="@string/test_track" />

    <TextView
        android:id="@+id/info_track_year"
        style="@style/PlayerTrackInfoLeft"
        android:text="@string/track_year"
        app:layout_constraintStart_toEndOf="@id/v_line_left_2"
        app:layout_constraintBottom_toTopOf="@id/info_track_genre"
        app:layout_constraintTop_toBottomOf="@id/track_album"
        app:layout_constraintTag="info" />

    <TextView
        android:id="@+id/track_year"
        style="@style/PlayerTrackInfoRight"
        app:layout_constraintEnd_toStartOf="@id/v_line_right_2"
        app:layout_constraintBottom_toTopOf="@id/track_genre"
        app:layout_constraintTop_toBottomOf="@id/info_track_album"
        tools:text="@string/test_year" />

    <TextView
        android:id="@+id/info_track_genre"
        style="@style/PlayerTrackInfoLeft"
        android:text="@string/track_genre"
        app:layout_constraintStart_toEndOf="@id/v_line_left_2"
        app:layout_constraintBottom_toTopOf="@id/info_track_country"
        app:layout_constraintTop_toBottomOf="@id/info_track_year"
        app:layout_constraintTag="info" />

    <TextView
        android:id="@+id/track_genre"
        style="@style/PlayerTrackInfoRight"
        app:layout_constraintEnd_toStartOf="@id/v_line_right_2"
        app:layout_constraintBottom_toTopOf="@id/info_track_country"
        app:layout_constraintTop_toBottomOf="@id/track_year"
        tools:text="@string/test_genre" />

    <TextView
        android:id="@+id/info_track_country"
        style="@style/PlayerTrackInfoLeft"
        android:text="@string/track_country"
        app:layout_constraintStart_toEndOf="@id/v_line_left_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_track_genre"
        app:layout_constraintTag="info" />

    <TextView
        android:id="@+id/track_country"
        style="@style/PlayerTrackInfoRight"
        app:layout_constraintEnd_toStartOf="@id/v_line_right_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_genre"
        tools:text="@string/test_country" />



</androidx.constraintlayout.widget.ConstraintLayout>